# HUAWEI_coding2018

./: .gitignore  build.sh  package.sh  readme.txt  validfile.sh
ecs/: AllocPM_DEMO.cpp  CMakeLists.txt  CmakeConfig.txt  FlavorIntST.cpp  FlavorIntST.h  PMAlloc.cpp  PMAlloc.h  Predict_DEMO.cpp  Readme.md  flavor.cpp  flavor.h  flavorCollect.h  input.cpp  input.h  phymachine.cpp  phymachine.h  predict.cpp  predict.h  trainDataList.cpp  trainDataList.h
ecs/AllocPM/: AllocPM_DEMO.cpp  Larger_first.cpp  dynamic.cpp
ecs/Predict/: AR_predict.cpp  RF_predict.cpp  tools_collectByDay.cpp  xgboost.cpp
ecs/common/: FlavorIntST.h  PMAlloc.cpp  PMAlloc.h  common.h  flavor.cpp  flavor.h  input.cpp  input.h  linux_list.h  linux_my_kernel.h  predict.cpp  predict.h
ecs/othersrc/: denoise.cpp  denoise.h  fft.cpp  fft.h  flavorCollect.cpp  levinson.cpp  myRFdeal.cpp  qsort.cpp  reg_RF.cpp  reg_RF.h
testdata/alldata/: TrainData.txt  input.txt  output.txt
testdata/subAllData1/: input.txt
testdata/subAllData2/: TrainData.txt  input.txt
testdata/usecase1/: output.txt
